examples/test/testpolicy11726.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11726
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key9: value28
      key19: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value40
          key28: value28
          key47: value16
      podSelector:
        matchLabels:
          key22: value3
          key9: value20
          key35: value5
